--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "secure_python_framework"
+name = "secure_python"
 version = "1.3.4"
 description = "A framework for encoding and decoding text using custom mappings."
 authors = [{ name = "Soundheard" }]
 license = { file = "LICENSE" }
 readme = "README.md"
-requires-python = ">=3.6"
-dependencies = []  # Add any dependencies your project requires here
+requires-python = ">=3.7"
+dependencies = ["pycryptodome"]  
 
 [tool.setuptools]
 packages = ["secure_python"]
