--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "secure_python"
 version = "1.3.4"
 description = "A framework for encoding and decoding text using custom mappings."
-authors = [{ name = "Soundheard" }]
+authors = [{ name = "Soundhearddev" }]
 license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.7"
