--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -12,18 +12,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out repository code
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.x"
 
-      - name: Build release distributions
+      - name: Install build tool and build distributions
         run: |
           python -m pip install --upgrade build
           python -m build
 
-      - name: Upload distributions
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: release-dists
@@ -31,17 +33,18 @@ jobs:
 
   pypi-publish:
     runs-on: ubuntu-latest
-    needs:
-      - release-build
+    needs: release-build
+    permissions:
+      contents: read
 
     steps:
-      - name: Retrieve release distributions
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: release-dists
           path: dist/
 
-      - name: Publish release distributions to PyPI
+      - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
